# EquationAlphabet

./: .gitignore  README.md  SimpleEquation.py  notebook.ipynb  pyproject.toml
equations/: __init__.py
src/: __init__.py  generate.py  models.py  solver.py
src/equation_alphabet/: __init__.py  generator.py  solver.py
tests/: test_equations.py
